--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,17 +15,17 @@ jobs:
 
       - name: Update appsettings.json with Secrets
         run: |
-          jq '.AWS.AccessKey = env.AWS_DYNAMO_DB_ACCESS_KEY_ID |
-              .AWS.SecretKey = env.AWS_SECRET_DYNAMO_DB_ACCESS_KEY |
-              .AWS.Region = env.AWS_REGION |
-              .AWS.TableName = env.AWS_TABLE_NAME' appsettings.json > appsettings.updated.json
-          mv appsettings.updated.json appsettings.json
-
-        env:
-          AWS_DYNAMO_DB_ACCESS_KEY_ID: ${{ secrets.AWS_DYNAMO_DB_ACCESS_KEY_ID }}
-          AWS_SECRET_DYNAMO_DB_ACCESS_KEY: ${{ secrets.AWS_SECRET_DYNAMO_DB_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          AWS_TABLE_NAME: ${{ secrets.AWS_TABLE_NAME }}
+          # AWS.AccessKey güncelle
+          sed -i 's|"<AWS_DYNAMO_DB_ACCESS_KEY_ID>"|"'${{ secrets.AWS_DYNAMO_DB_ACCESS_KEY_ID }}'"|g' appsettings.json
+          
+          # AWS.SecretKey güncelle
+          sed -i 's|"<AWS_SECRET_DYNAMO_DB_ACCESS_KEY>"|"'${{ secrets.AWS_SECRET_DYNAMO_DB_ACCESS_KEY }}'"|g' appsettings.json
+          
+          # AWS.Region güncelle
+          sed -i 's|"<AWS_REGION>"|"'${{ secrets.AWS_REGION }}'"|g' appsettings.json
+          
+          # AWS.TableName güncelle
+          sed -i 's|"<AWS_TABLE_NAME>"|"'${{ secrets.AWS_TABLE_NAME }}'"|g' appsettings.json
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
