--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,16 +15,9 @@ jobs:
 
       - name: Update appsettings.json with Secrets
         run: |
-          # AWS.AccessKey güncelle
           sed -i 's|"<AWS_DYNAMO_DB_ACCESS_KEY_ID>"|"'${{ secrets.AWS_DYNAMO_DB_ACCESS_KEY_ID }}'"|g' appsettings.json
-          
-          # AWS.SecretKey güncelle
           sed -i 's|"<AWS_SECRET_DYNAMO_DB_ACCESS_KEY>"|"'${{ secrets.AWS_SECRET_DYNAMO_DB_ACCESS_KEY }}'"|g' appsettings.json
-          
-          # AWS.Region güncelle
           sed -i 's|"<AWS_REGION>"|"'${{ secrets.AWS_REGION }}'"|g' appsettings.json
-          
-          # AWS.TableName güncelle
           sed -i 's|"<AWS_TABLE_NAME>"|"'${{ secrets.AWS_TABLE_NAME }}'"|g' appsettings.json
 
       - name: Configure AWS Credentials
@@ -60,7 +53,9 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           port: 22
           script: |
-            docker run -d -p 8081:8080 --name picusapp-rb ${{ secrets.AWS_ECR_URI }}:ec2
+                docker stop picusapp-rb || true
+                docker rm picusapp-rb || true
+                docker run -d -p 8081:8080 --name picusapp-rb ${{ secrets.AWS_ECR_URI }}:ec2
   
   
   ReplaceLBTargetGroupTo8081:
