--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
+          aws-region: ${{ secrets.AWS_REGION }}
           
       - name: Create Docker Image
         run: |
@@ -35,7 +35,7 @@ jobs:
           
       - name: Push To ECR
         run: |
-          aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 054037109571.dkr.ecr.eu-west-1.amazonaws.com
+          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.AWS_ECR }}
           docker push ${{ secrets.AWS_ECR_URI }}:ec2
           docker push ${{ secrets.AWS_ECR_URI }}:ecs
                 
@@ -90,7 +90,7 @@ jobs:
           port: 22
           script: |
             sudo apt install awscli -y
-            aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 054037109571.dkr.ecr.eu-west-1.amazonaws.com
+            aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.AWS_ECR }}
             docker pull ${{ secrets.AWS_ECR_URI }}:ec2
             docker stop picusapp || true
             docker rm picusapp || true
@@ -125,7 +125,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
+          aws-region: ${{ secrets.AWS_REGION }}
           
       - name: Replace ALB Target Group
         run: |
